--- a/publications.bib
+++ b/publications.bib
@@ -1,32 +1,15 @@
+Eliminate abstract, "In Proceedings of ", and ensure URL
+
+## Publications
 
 @inproceedings{fractal:nsdi:2026,
  author = {Zhicheng Huang and Ramiz Dundar and Yizheng Xie and Konstantinos Kallas and Nikos Vasilakis},
  title = {Fractal: Fault-Tolerant Shell-Script Distribution},
  booktitle = {23rd USENIX Symposium on Networked Systems Design and Implementation (NSDI 26)},
  year = {2026},
- url = {},
  address = {Renton, WA},
  publisher = {USENIX Association},
- month = may,
- pdf = {https://nikos.vasilak.is/p/fractal:nsdi:2026.pdf},
- code = {},
- abstract = {This paper presents FRACTAL, a new system that offers
-fault tolerant distributed shell script execution for unmod-
-ified scripts. FRACTAL first distinguishes recoverable regions
-from side-effectful ones, and augments them with additional
-runtime support aimed at fault recovery. It employs precise de-
-pendency and progress tracking at the subgraph level to offer
-sound and efficient fault recovery. It minimizes the number of
-upstream regions that are re-executed during recovery and en-
-sures exactly-once semantics upon recovery for downstream
-regions. Evaluation on 4- and 30-node clusters indicates aver-
-age fault-free speedups of (1) >9.6×over Bash, a single-node
-shell-interpreter baseline, (2) >5.5×over Hadoop Streaming,
-a MapReduce system that supports language-agnostic third-
-party components, and (3) 17% over DISH, a state-of-the-art
-fault-intolerant shell-script distribution system—all while re-
-covering 7.8–16.4×faster than Hadoop Streaming in cases
-of faults.}
+ month = may
 }
 
 @inproceedings{slowpoke:nsdi:2026,
@@ -36,10 +19,10 @@ of faults.}
  year = {2026},
  address = {Renton, WA},
  publisher = {USENIX Association},
- month = may,
- code = {https://github.com/atlas-brown/slowpoke},
+ month = may
 }
 
+#### The Koala Benchmarks for the Shell: Characterization and Implications
 
 @inproceedings{koala:atc:2025,
  title = {The Koala Benchmarks for the Shell: Characterization and Implications},
@@ -51,28 +34,10 @@ of faults.}
  pages = {449--64},
  url = {https://www.usenix.org/conference/atc25/presentation/lamprou},
  publisher = {USENIX Association},
- month = jul,
- pdf = {https://www.usenix.org/system/files/atc25-lamprou.pdf},
- abstract = {KOALA is a benchmark suite aimed at performance-oriented
-research targeting the Unix and Linux shell. It combines a
-systematic collection of diverse shell programs collected from
-tasks found out in the wild, various real inputs to these pro-
-grams facilitating small and large deployments, extensive
-analysis and characterization aiding their understanding, and
-additional infrastructure and tooling aimed at usability and
-reproducibility in systems research. The KOALA benchmarks
-perform a variety of common shell tasks; they combine all
-major language features of the POSIX shell; they use a vari-
-ety of POSIX, GNU Coreutils, and third-party components;
-and they operate on inputs of varying size and composition—
-available on both permanent archival storage and scalable
-cloud storage. Applying KOALA to four systems aimed at
-accelerating shell programs offers a broader perspective on
-their trade-offs, generalizes their key results, and contributes
-to a better understanding of these systems.},
- code = {https://github.com/kbensh/koala}
+ month = jul
 }
 
+#### From Ahead-of- to Just-in-Time and Back Again: Static Analysis for Unix Shell Programs
 
 @inproceedings{sash:hotos:2025,
 author = {Lazarek, Lukas and Jung, Seong-Heon and Lamprou, Evangelos and Li, Zekai and Narsipur, Anirudh and Zhao, Eric and Greenberg, Michael and Kallas, Konstantinos and Mamouras, Konstantinos and Vasilakis, Nikos},
@@ -91,6 +56,7 @@ location = {Banff, AB, Canada},
 series = {HotOS '25}
 }
 
+#### BinWrap: Hybrid Protection against Native Node.js Add-ons
 
 @inproceedings{binwrap:asiaccs:2023,
 author = {Christou, George and Ntousakis, Grigoris and Lahtinen, Eric and Ioannidis, Sotiris and Kemerlis, Vasileios P. and Vasilakis, Nikos},
@@ -106,12 +72,11 @@ pages = {429–442},
 numpages = {14},
 keywords = {Intel MPK/PKU, Node.js, native add-ons, seccomp-BPF},
 location = {Melbourne, VIC, Australia},
-series = {ASIA CCS '23},
-pfd = {https://dl.acm.org/doi/pdf/10.1145/3579856.3590330},
-code = {https://github.com/atlas-brown/binwrap},
-abstract = {Modern applications, written in high-level programming languages, enjoy the security benefits of memory and type safety. Unfortunately, even a single memory-unsafe library can wreak havoc on the rest of an otherwise safe application, nullifying all the security guarantees offered by the high-level language and its managed runtime. We perform a study across the Node.js ecosystem to understand the use patterns of binary add-ons. Taking the identified trends into account, we propose a new hybrid permission model aimed at protecting both a binary add-on and its language-specific wrapper. The permission model is applied all around a native add-on and is enforced through a hybrid language-binary scheme that interposes on accesses to sensitive resources from all parts of the native library. We infer the add-on’s permission set automatically over both its binary and JavaScript sides, via a set of novel program analyses. Applied to a wide variety of native add-ons, we show that our framework, BinWrap, reduces access to sensitive resources, defends against real-world exploits, and imposes an overhead that ranges between 0.71%–10.4%.}
+series = {ASIA CCS '23}
 }
 
+
+#### Executing Shell Scripts in the Wrong Order, Correctly
 
 @inproceedings{hs:hotos:2023,
 author = {Liargkovas, Georgios and Kallas, Konstantinos and Greenberg, Michael and Vasilakis, Nikos},
@@ -129,6 +94,7 @@ location = {Providence, RI, USA},
 series = {HotOS '23}
 }
 
+# DiSh: Dynamic Shell-Script Distribution
 
 @inproceedings{dish:nsdi:2023,
  author = {Tammam Mustafa and Konstantinos Kallas and Pratyush Das and Nikos Vasilakis},
@@ -140,12 +106,10 @@ series = {HotOS '23}
  pages = {341--356},
  url = {https://www.usenix.org/conference/nsdi23/presentation/mustafa},
  publisher = {USENIX Association},
- month = apr,
- pdf = {http://nikos.vasilak.is/p/pash:nsdi:2023.pdf},
- abstract = {Shell scripting remains prevalent for automation and data-processing tasks, partly due to its dynamic features—e.g., expansion, substitution—and language agnosticism—i.e., the ability to combine third-party commands implemented in any programming language. Unfortunately, these characteristics hinder automated shell-script distribution, often necessary for dealing with large datasets that do not fit on a single computer. This paper introduces DiSh, a system that distributes the execution of dynamic shell scripts operating on distributed filesystems. DiSh is designed as a shim that applies program analyses and transformations to leverage distributed computing, while delegating all execution to the underlying shell available on each computing node. As a result, DiSh does not require modifications to shell scripts and maintains compatibility with existing shells and legacy functionality. We evaluate DiSh against several options available to users today: (i) Bash, a single-node shell-interpreter baseline, (ii) PaSh, a state-of-the-art automated-parallelization system, and (iii) Hadoop Streaming, a MapReduce system that supports language-agnostic third-party components. Combined, our results demonstrate that DiSh offers significant performance gains, requires no developer effort, and handles arbitrary dynamic behaviors pervasive in real-world shell scripts.},
- code = {https://github.com/binpash/pash/}
+ month = apr
 }
 
+#### SecBench.js: An Executable Security Benchmark Suite for Server-Side JavaScript
 
 @inproceedings{secbench:icse:2023,
  author = {Bhuiyan, Masudul Hasan Masud and Parthasarathy, Adithya Srinivas and Vasilakis, Nikos and Pradel, Michael and Staicu, Cristian-Alexandru},
@@ -156,13 +120,10 @@ series = {HotOS '23}
  number = {},
  pages = {1059-1070},
  keywords = {Fault diagnosis;Codes;Benchmark testing;Software;Safety;Security;Public policy},
- doi = {10.1109/ICSE48619.2023.00096},
- url = {https://ieeexplore.ieee.org/document/10172577},
- pdf = {https://nikos.vasilak.is/p/secbench:icse:2023.pdf}, 
- abstract = {NPM is the largest software ecosystem in the world, offering millions of free, reusable packages. In recent years, various security threats to packages published on npm have been reported, including vulnerabilities that affect millions of users. To continuously improve techniques for detecting vulnerabilities and mitigating attacks that exploit them, a reusable benchmark of vulnerabilities would be highly desirable. Ideally, such a benchmark should be realistic, come with executable exploits, and include fixes of vulnerabilities. Unfortunately, there currently is no such benchmark, forcing researchers to repeatedly develop their own evaluation datasets and making it difficult to compare techniques with each other. This paper presents SecBench.js,, the first comprehensive benchmark suite of vulnerabilities and executable exploits for npm. The benchmark comprises 600 vulnerabilities, which cover the five most common vulnerability classes for server-side JavaScript. Each vulnerability comes with a payload that exploits the vulnerability and an oracle that validates successful exploitation. SecBench.js, enables various applications, of which we explore three in this paper: (i) cross-checking SecBench.js, against public security advisories reveals 168 vulnerable versions in 19 packages that are mislabeled in the advisories; (ii) applying simple code transformations to the exploits in our suite helps identify flawed fixes of vulnerabilities; (iii) dynamically analyzing calls to common sink APIs, e.g., exec(), yields a ground truth of code locations for evaluating vulnerability detectors. Beyond providing a reusable benchmark to the community, our work identified 20 zero-day vulnerabilities, most of which are already acknowledged by practitioners.},
- code = {https://github.com/cristianstaicu/SecBench.js}
+ doi = {10.1109/ICSE48619.2023.00096}
 }
 
+#### Towards Practical Application-level Support for Privilege Separation
 
 @inproceedings{pitchfork:acsac:2022,
  author = {Sultana, Nik and Zhu, Henry and Zhong, Ke and Zheng, Zhilei and Mao, Ruijie and Chauhan, Digvijaysinh and Carrasquillo, Stephen and Zhao, Junyong and Shi, Lei and Vasilakis, Nikos and Loo, Boon Thau},
@@ -180,6 +141,8 @@ series = {HotOS '23}
  series = {ACSAC '22}
 }
 
+#### Themis: A Secure Decentralized Framework for Microservice Interaction in Serverless Computing
+
 @inproceedings{themis:ares:2022,
  author = {Aktypi, Angeliki and Karnikis, Dimitris and Vasilakis, Nikos and Rasmussen, Kasper},
  title = {Themis: A Secure Decentralized Framework for Microservice Interaction in Serverless Computing},
@@ -194,30 +157,10 @@ series = {HotOS '23}
  numpages = {11},
  keywords = {DHT, Security, Serverless, Service mesh.},
  location = {Vienna, Austria},
- series = {ARES '22},
- pdf = {http://nikos.vasilak.is/p/themis:ares:2022.pdf},
- abstract = {In serverless computing, applications are composed of stand-alone
-microservices that are invoked and scale up independently. Peer-
-to-peer protocols can be used to enable decentralized communica-
-tion among the services that compose each application. This paper
-presents Themis, a framework for secure service-to-service interac-
-tion targeting these environments and the underlying service mesh
-architectures. Themis builds on a notion of decentralized identity
-management to allow confidential and authenticated service-to-
-service interaction without the need for a centralized certificate
-authority. Themis adopts a layered architecture. Its lower layer
-forms a core communication protocol pair that offers strong se-
-curity guarantees without depending on a centralized point of
-authority. Building on this pair, an upper layer provides a series of
-actions related to communication and identifier management—e.g.,
-store, find, and join. This paper analyzes the security properties
-of Themis’s protocol suite and shows how it provides a decen-
-tralized and flexible communication platform. The evaluation of
-our Themis prototype targeting serverless applications written
-in JavaScript shows that these security benefits come with small
-runtime latency and throughput overheads, and modest startup
-overheads.}
+ series = {ARES '22}
 }
+
+#### Practically Correct, Just-in-Time Shell Script Parallelization
 
 @inproceedings{pash:osdi:2022,
  author = {Konstantinos Kallas and Tammam Mustafa and Jan Bielak and Dimitris Karnikis and Thurston H.Y. Dang and Michael Greenberg and Nikos Vasilakis},
@@ -229,27 +172,10 @@ overheads.}
  pages = {769--785},
  url = {https://www.usenix.org/conference/osdi22/presentation/kallas},
  publisher = {USENIX Association},
- month = jul,
- abstract = {This paper presents PaSh, a system for parallelizing POSIX
-shell scripts. Given a script, PaSh converts it to a dataflow
-graph, performs a series of semantics-preserving program
-transformations that expose parallelism, and then converts
-the dataflow graph back into a script—one that adds POSIX
-constructs to explicitly guide parallelism coupled with PaSh-
-provided Unix-aware runtime primitives for addressing per-
-formance- and correctness-related issues. A lightweight an-
-notation language allows command developers to express
-key parallelizability properties about their commands. An
-accompanying parallelizability study of POSIX and GNU
-commands—two large and commonly used groups—guides
-the annotation language and optimized aggregator library
-that PaSh uses. PaSh’s extensive evaluation over 44 unmod-
-ified Unix scripts shows significant speedups (0.89–61.1×,
-avg: 6.7×) stemming from the combination of its program
-transformations and runtime primitives.},
- code = {https://github.com/binpash/pash},
- pdf = {http://nikos.vasilak.is/p/pash:eurosys:2021.pdf}
+ month = jul
 }
+
+#### A systematic analysis of the event-stream incident
 
 @inproceedings{ev:eurosec:2022,
  author = {Arvanitis, Iosif and Ntousakis, Grigoris and Ioannidis, Sotiris and Vasilakis, Nikos},
@@ -268,6 +194,8 @@ transformations and runtime primitives.},
  series = {EuroSec '22}
 }
 
+### Supply-Chain Vulnerability Elimination via Active Learning and Regeneration
+
 @inproceedings{harp:ccs:2021,
  author = {Vasilakis, Nikos and Benetopoulos, Achilles and Handa, Shivam and Schoen, Alizee and Shen, Jiasi and Rinard, Martin C.},
  title = {Supply-Chain Vulnerability Elimination via Active Learning and Regeneration},
@@ -284,6 +212,8 @@ transformations and runtime primitives.},
  location = {Virtual Event, Republic of Korea},
  series = {CCS '21}
 }
+
+### Preventing Dynamic Library Compromise on Node.js via RWX-Based Privilege Reduction
 
 @inproceedings{mir:ccs:2021,
  author = {Vasilakis, Nikos and Staicu, Cristian-Alexandru and Ntousakis, Grigoris and Kallas, Konstantinos and Karel, Ben and DeHon, Andr\'{e} and Pradel, Michael},
@@ -302,6 +232,7 @@ transformations and runtime primitives.},
  series = {CCS '21}
 }
 
+### Efficient Module-Level Dynamic Analysis for Dynamic Languages with Module Recontextualization
 
 @inbook{lya:fse:2021,
  author = {Vasilakis, Nikos and Ntousakis, Grigoris and Heller, Veit and Rinard, Martin C.},
@@ -316,6 +247,7 @@ transformations and runtime primitives.},
  numpages = {12}
 }
 
+### An Order-Aware Dataflow Model for Parallel Unix Pipelines
 
 @inproceedings{pash:icfp:2021,
  author = {Handa, Shivam and Kallas, Konstantinos and Vasilakis, Nikos and Rinard, Martin C.},
@@ -335,6 +267,7 @@ transformations and runtime primitives.},
  keywords = {Dataflow, Order-awareness, POSIX, Parallelism, Shell, Unix}
 }
 
+#### Unix Shell Programming: The Next 50 Years
 
 @inproceedings{pash:hotos:2021,
  author = {Greenberg, Michael and Kallas, Konstantinos and Vasilakis, Nikos},
@@ -353,6 +286,8 @@ transformations and runtime primitives.},
  series = {HotOS '21}
 }
 
+#### PaSh: Light-touch Data-Parallel Shell Processing
+
 @inproceedings{pash:eurosys:2021,
  author = {Vasilakis, Nikos and Kallas, Konstantinos and Mamouras, Konstantinos and Benetopoulos, Achilles and Cvetkovi\'{c}, Lazar},
  title = {PaSh: Light-Touch Data-Parallel Shell Processing},
@@ -369,6 +304,9 @@ transformations and runtime primitives.},
  location = {Online Event, United Kingdom},
  series = {EuroSys '21}
 }
+
+
+#### Active learning for software engineering
 
 @inproceedings{alr:splash:2019,
  author = {Cambronero, Jos\'{e} P. and Dang, Thurston H. Y. and Vasilakis, Nikos and Shen, Jiasi and Wu, Jerry and Rinard, Martin C.},
@@ -387,6 +325,8 @@ transformations and runtime primitives.},
  series = {Onward! 2019}
 }
 
+#### Detecting Asymmetric Application-layer Denial-of-Service Attacks In-Flight with Finelame
+
 @inproceedings{finelame:atc:2019,
  author = {Henri Maxime Demoulin and Isaac Pedisich and Nikos Vasilakis and Vincent Liu and Boon Thau Loo and Linh Thi Xuan Phan},
  title = {Detecting Asymmetric Application-layer Denial-of-Service Attacks In-Flight with Finelame},
@@ -400,6 +340,8 @@ transformations and runtime primitives.},
  month = jul,
 }
 
+
+#### Ignis: Scaling Distribution-Oblivious Systems with Light-Touch Distribution
 
 @inproceedings{ignis:pldi:2019,
  author = {Vasilakis, Nikos and Karel, Ben and Palkhiwala, Yash and Sonchack, John and DeHon, Andr{\'e} and Smith, Jonathan M.},
@@ -418,6 +360,8 @@ transformations and runtime primitives.},
  keywords = { Distribution, Profiling, Load detection, Transformations, Scale-out, Scalability, Parallelism,  Decomposition }
 } 
 
+#### The Web as a Distributed Computing Platform
+
 @inproceedings{ar:edgesys:2018,
  author = {Vasilakis, Nikos and Goel, Pranjal and Demoulin, Henri Maxime and Smith, Jonathan M.},
  title = {The Web as a Distributed Computing Platform},
@@ -435,6 +379,9 @@ transformations and runtime primitives.},
  series = {EdgeSys'18}
 }
 
+
+#### BreakApp: Automated, Flexible Application Compartmentalization
+
 @inproceedings{breakapp:ndss:2018,
  author = {Vasilakis, Nikos and Karel, Ben and Roessler, Nick and Dautenhahn, Nathan and DeHon, Andr{\'e} and Smith, Jonathan M.},
  title = {BreakApp: Automated, Flexible Application Compartmentalization},
@@ -447,6 +394,9 @@ transformations and runtime primitives.},
  pages = {693--708},
  keywords = {Compartmentalization, Least-Privilege Separation, Modules, Packages, Security},
 } 
+
+
+#### Towards Fine-grained, Automated Application Compartmentalization
 
 @inproceedings{breakapp:plos:2017,
  author = {Vasilakis, Nikos and Karel, Ben and Roessler, Nick and Dautenhahn, Nathan and DeHon, Andr\'{e} and Smith, Jonathan M.},
@@ -465,6 +415,8 @@ transformations and runtime primitives.},
  series = {PLOS '17}
 }
 
+#### Query-efficient Partitions for Dynamic Data
+
 @inproceedings{unispace:apsys:2017,
  author = {Vasilakis, Nikos and Palkhiwala, Yash and Smith, Jonathan M.},
  title = {Query-efficient Partitions for Dynamic Data},
@@ -482,6 +434,8 @@ transformations and runtime primitives.},
  series = {APSys '17}
 }
 
+# From Lone Dwarfs to Giant Superclusters: Rethinking Operating System Abstractions for the Cloud
+
 @inproceedings{andromeda:hotos:2015,
  author = {Vasilakis, Nikos and Karel, Ben and Smith, Jonathan M.},
  title  = {From Lone Dwarfs to Giant Superclusters: Rethinking Operating System Abstractions for the Cloud},
@@ -497,6 +451,8 @@ transformations and runtime primitives.},
  numpages = {6},
  series = {HOTOS'15}
 }
+
+#### Architectural Support for Software-Defined Metadata Processing
 
 @inproceedings{pump:asplos:2015,
  author = {Dhawan, Udit and Hritcu, Catalin and Rubin, Raphael and Vasilakis, Nikos and Chiricescu, Silviu and Smith, Jonathan M. and Knight,Jr., Thomas F. and Pierce, Benjamin C. and DeHon, Andre},
@@ -515,6 +471,8 @@ transformations and runtime primitives.},
  address = {New York, NY, USA},
  keywords = {CFI, memory safety, metadata, security, tagged architecture, taint tracking},
 }
+
+#### PUMP: A Programmable Unit for Metadata Processing
 
 @inproceedings{pump:hasp:2014,
  author = {Dhawan, Udit and Vasilakis, Nikos and Rubin, Raphael and Chiricescu, Silviu and Smith, Jonathan M. and Knight,Jr., Thomas F. and Pierce, Benjamin C. and DeHon, Andr{\'e}},
@@ -535,6 +493,8 @@ transformations and runtime primitives.},
  keywords = {control-flow integrity, memory safety, metadata, security, tagged architecture, taint tracking},
 }
 
+#### Developing Multiplayer Pervasive Games and Networked Interactive Installations Using Ad Hoc Mobile Sensor Nets
+
 @inproceedings{finn:ace:2009,
 author = {Akribopoulos, Orestis and Logaras, Marios and Vasilakis, Nikos and Kokkinos, Panagiotis and Mylonas, Georgios and Chatzigiannakis, Ioannis and Spirakis, Paul},
 title = {Developing multiplayer pervasive games and networked interactive installations using ad hoc mobile sensor nets},
@@ -550,6 +510,11 @@ numpages = {8},
 location = {Athens, Greece},
 series = {ACE '09}
 }
+
+
+## Tutorials, Tools, and Demos
+
+### Demo: Detecting Third-Party Library Problems with Combined Program Analysis
 
 @inproceedings{combined:ccs:2021,
 author = {Ntousakis, Grigoris and Ioannidis, Sotiris and Vasilakis, Nikos},
@@ -568,6 +533,8 @@ location = {Virtual Event, Republic of Korea},
 series = {CCS '21}
 }
 
+#### HandsFree: Next Generation Sequence Processing, Mapping and Analysis Made Easy
+
 @inproceedings{handsfree:dils:2013,
  author = {Loher, Phillipe and Vasilakis, Nikos and Malamon, John  and Chen, Huang-Wen and Rigoutsos, Isidore},
  title = {HandsFree: Next Generation Sequence Processing, Mapping and Analysis Made Easy},
@@ -577,6 +544,8 @@ series = {CCS '21}
  year = {2013},
  keywords = {DNA analysis, RNA analysis, genomic pipeline, mapping service}
 }
+
+### Demo: Multiplayer Pervasive Games and Networked Interactive Installations Using Ad Hoc Mobile Sensor Networks
 
 @inproceedings{finndemo:ace:2009,
  author = {Akribopoulos, Orestis and Logaras, Marios and Vasilakis, Nikos and Kokkinos, Panagiotis and Mylonas, Georgios and Chatzigiannakis, Ioannis and Spirakis, Paul},
@@ -595,6 +564,9 @@ series = {CCS '21}
  series = {ACE '09}
 }
 
+
+#### Using wireless sensor networks to develop pervasive multi-player games
+
 @inproceedings{finn:sensys:2008,
  author = {Orestis Akribopoulos and Marios Logaras and Nikos Vasilakis and Panagiotis C. Kokkinos and Georgios Mylonas and Ioannis Chatzigiannakis},
  title = {Using wireless sensor networks to develop pervasive multi-player games},
@@ -608,6 +580,8 @@ series = {CCS '21}
  doi = {10.1145/1460412.1460459}
 }
 
+#### A software platform for developing multi-player pervasive games using small programmable object technologies
+
 @inproceedings{finn:mass:2008, 
  author = {Orestis Akribopoulos and Dimitrios Bousis and Dionysios Efstathiou and Haris Koutsouridis and Marios Logaras and Andreas Loukas and Alexandros Nafas and Georgios Oikonomou and Irini Thireou and Nikos Vasilakis and Panagiotis C. Kokkinos and Georgios Mylonas and Ioannis Chatzigiannakis}, 
  booktitle = {2008 5th IEEE International Conference on Mobile Ad Hoc and Sensor Systems}, 
@@ -619,6 +593,9 @@ series = {CCS '21}
  month = {Sept}
 }
 
+## Panels and Reports
+
+#### The Future of the Shell: Unix and Beyond
 
 @inproceedings{shellpanel:hotos:2021,
   author = {Greenberg, Michael and Kallas, Konstantinos and Vasilakis, Nikos},
@@ -636,6 +613,7 @@ series = {CCS '21}
   series = {HotOS '21}
 }
 
+#### Report on the "The Future of the Shell" Panel at HotOS 2021
 
 @inproceedings{shellpanel:report:2021,
   author = {Michael Greenberg and Konstantinos Kallas and Nikos Vasilakis and Stephen Kell},
@@ -652,6 +630,7 @@ series = {CCS '21}
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+## Dissertations
 
 @phdthesis{andromeda:penn:2019,
   title={Andromeda---A Distributed Userspace},
@@ -671,6 +650,8 @@ series = {CCS '21}
   year = {2010},
   pdf = {http://nikos.vasilak.is/p/finn:upatras:2009.pdf}
 }
+
+## Projects
 
 @misc{koala:gh,
  title = {The Koala Benchmarks for the Shell},
